Spacebar Scroll Down Fix in Firefox (#37469)
* initial spacebar scrolling fix in firefox

* removing outer scrollbar

* outer scrollbar fix update

--- a/client/web/src/repo/RepoRevisionSidebar.module.scss
+++ b/client/web/src/repo/RepoRevisionSidebar.module.scss
@@ -1,6 +1,6 @@
 .tabpanels {
     margin-top: 0.25rem;
-    height: calc(100% - 2.25rem);
+    flex-grow: 1;
 }
 
 .close-icon {
